// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should play a sound when changing from play=false to play=true 1`] = `
Array [
  "mock-audio-context-destination",
]
`;

exports[`should play a sound when changing from play=false to play=true 2`] = `
Array [
  42.42,
]
`;

exports[`should play a sound when changing from play=false to play=true 3`] = `440`;

exports[`should play a sound when mounting and play=true 1`] = `
Array [
  "mock-audio-context-destination",
]
`;

exports[`should play a sound when mounting and play=true 2`] = `
Array [
  42.42,
]
`;

exports[`should play a sound when mounting and play=true 3`] = `440`;
